--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>Vorkurs Informatik zum WS 13/14</title>
         <link rel="stylesheet" href="http://www.w3.org/StyleSheets/Core/Chocolate" type="text/css" />
     </head>
@@ -12,9 +13,9 @@
         <ol>
             <li>
             Kopieren Sie folgende Zeile in die Zwischenablage: 
-            <blockquote><code>curl -s nutsh.morr.cc/setup | bash</code></blockquote>
+            <blockquote><code>source <(curl -s nutsh.morr.cc/setup)</code></blockquote>
             </li>
-            <li>Öffnen Sie ein Terminalfenster (zu finden unter Anwendungen – Fu – Terminal)</li>
+            <li>Öffnen Sie ein Terminalfenster (zu finden unter Anwendungen → Systemwerkzeuge → Terminal)</li>
             <li>Kopieren Sie die Zeile hinein und drücken Sie <i>Enter</i>. Die Installation startet.</li>
         </ol>
 
