--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <blockquote><code>source <(curl -s nutsh.morr.cc/setup)</code></blockquote>
             </li>
             <li>Öffnen Sie ein Terminalfenster (zu finden unter Anwendungen → Systemwerkzeuge → Terminal)</li>
-            <li>Kopieren Sie die Zeile hinein und drücken Sie <i>Enter</i>. Die Installation startet.</li>
+            <li>Kopieren Sie die Zeile hinein (mit Rechtsklick → Einfügen) und drücken Sie <i>Enter</i>. Die Installation startet.</li>
         </ol>
 
         <h2>Starten der Nut Shell</h2>
