"Wie kann ich das zu Hause benutzen?"

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <body>
         <h1>Vorkurs Informatik zum WS 13/14</h1>
 
+        <h2>Systemvoraussetzungen</h2>
+
+        <p>Wenn Sie die Nut Shell während oder nach dem Vorkurs auf Ihrem eigenen Rechner installieren möchten, brauchen Sie folgende Dinge:</p>
+
+        <ol>
+            <li>Eine Linux-Distribution, für Anfänger empfehlenswert sind <a href="http://ubuntuusers.de/">Ubuntu</a> oder <a href="http://de.opensuse.org/Hauptseite">openSUSE</a>.</li>
+            <li>Den Compiler der Programmiersprache "Go". Üblicherweise heißt das Softwarepaket <code>golang</code>.</li>
+            <li>Git, das Paket heißt fast überall <code>git</code>.</li>
+        </ol>
+
+        <p>Auf den Rechnern des Vorkurses ist bereits alles eingerichtet.</p>
+
         <h2>Installation der Nut Shell</h2>
 
         <ol>
@@ -23,6 +35,10 @@
 
         <p>Nach erfolgreicher Installation können Sie die Nut Shell über das Kommando <code>nutsh</code> starten.</p>
 
+        <h2>Kontakt</h2>
+
+        <p>Bei Problemen oder Fragen wenden Sie sich an <span>s<span title="ihate@spam.com&lt;/span&gt;">e</span>bastian</span>@morr<i title="&lt;/i&gt;mailto:">.</i>cc</p>
+
         <h2>Links</h2>
 
         <ul>
@@ -31,5 +47,6 @@
             <li><a href="/survey/">Feedback zur Nut Shell</a></li>
             -->
         </ul>
+
     </body>
 </html>
