--- a/index.html
+++ b/index.html
@@ -2,13 +2,28 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Vorkurs Informatik zum WS 13/14</title>
+        <title>Vorkurs Informatik</title>
         <link rel="stylesheet" href="http://www.w3.org/StyleSheets/Core/Chocolate" type="text/css" />
     </head>
     <body>
-        <h1>Die Nut Shell – Vorkurs Informatik zum WS 13/14</h1>
+        <h1>Die Nut Shell – Vorkurs Informatik an der TU Braunschweig</h1>
 
         <p>Die <i>Nut Shell</i> ist ein interaktives Tutorial, mit dem Sie den Umgang mit der bash-Shell und Kommadozeilenwerkzeugen erlernen können.</p>
+
+        <h2>Installation der Nut Shell</h2>
+
+        <ol>
+            <li>
+            Kopieren Sie folgende Zeile in die Zwischenablage:
+            <blockquote><code>source <(curl -s nutsh.morr.cc/setup)</code></blockquote>
+            </li>
+            <li>Öffnen Sie ein Terminalfenster, in dem eine <code>bash</code>-Shell laufen sollte (dies ist Standard).</li>
+            <li>Kopieren Sie die Zeile hinein und drücken Sie <i>Enter</i>. Die Installation startet.</li>
+        </ol>
+
+        <h2>Starten der Nut Shell</h2>
+
+        <p>Nach erfolgreicher Installation können Sie die Nut Shell über das Kommando <code>nutsh</code> starten.</p>
 
         <h2>Systemvoraussetzungen</h2>
 
@@ -17,7 +32,7 @@
         <ul>
             <li>Neu: Über SSH auf dem GITZ-Server (von überall aus)
             <p>Hierbei behalten Sie Ihren aktuellen Fortschritt, Sie können allerdings keine grafischen Programme starten (gedit, acroread). Verbinden Sie sich per <i>ssh</i> (Linux, Mac OS) oder <a href="http://www.putty.org"><i>Putty</i></a> (Windows) mit dem Server <code>rzloginlx.rz.tu-bs.de</code></p></li>
-            <li>Im den Linux-Räumen des GITZ</li>
+            <li>In den Linux-Räumen des GITZ</li>
             <li>Auf Ihrem eigenen Rechner</li>
         </ul>
 
@@ -30,21 +45,6 @@
             <li>Zur Bearbeitung der Lektionen brauchen Sie verschiedene Programme, nämlich mindestens Java und pdflatex. Wenn Sie merken, dass Ihnen ein weiteres Programm fehlt, ist es kein Problem, es während der Lektion nachzuinstallieren.</li>
         </ol>
 
-        <h2>Installation der Nut Shell</h2>
-
-        <ol>
-            <li>
-            Kopieren Sie folgende Zeile in die Zwischenablage: 
-            <blockquote><code>source <(curl -s nutsh.morr.cc/setup)</code></blockquote>
-            </li>
-            <li>Öffnen Sie ein Terminalfenster.</li>
-            <li>Kopieren Sie die Zeile hinein und drücken Sie <i>Enter</i>. Die Installation startet.</li>
-        </ol>
-
-        <h2>Starten der Nut Shell</h2>
-
-        <p>Nach erfolgreicher Installation können Sie die Nut Shell über das Kommando <code>nutsh</code> starten.</p>
-
         <h2>Kontakt</h2>
 
         <p>Bei Problemen oder Fragen wenden Sie sich an <span>s<span title="ihate@spam.com&lt;/span&gt;">e</span>bastian</span>@morr<i title="&lt;/i&gt;mailto:">.</i>cc</p>
@@ -52,7 +52,7 @@
         <h2>Links</h2>
 
         <ul>
-            <li><a href="https://www.tu-braunschweig.de/ips/teaching/ws13-14/vorkurs">Informationen über den Vorkurs</a></li>
+            <li><a href="https://www.tu-braunschweig.de/ips/teaching/ws14-15/vorkurs">Informationen über den Vorkurs</a></li>
             <li><a href="http://blog.morr.cc/tag/thesis/">Blogeinträge über die Entwicklung der Nut Shell</a></li>
         </ul>
 
