Changes due to the GitHub migration

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ol>
             <li>
             Kopieren Sie folgende Zeile in die Zwischenablage:
-            <blockquote><code>source <(curl -s nutsh.morr.cc/setup)</code></blockquote>
+            <blockquote><code>source <(curl -s tubs-ips.github.io/nutsh-vorkurs/setup)</code></blockquote>
             </li>
             <li>Öffnen Sie ein Terminalfenster, in dem eine <code>bash</code>-Shell laufen sollte (dies ist Standard).</li>
             <li>Kopieren Sie die Zeile hinein und drücken Sie <i>Enter</i>. Die Installation startet.</li>
