Load stylesheet via https instead of http to fix CSS problems

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Vorkurs Informatik</title>
-        <link rel="stylesheet" href="http://www.w3.org/StyleSheets/Core/Chocolate" type="text/css" />
+        <link rel="stylesheet" href="https://www.w3.org/StyleSheets/Core/Chocolate" type="text/css" />
     </head>
     <body>
         <h1>Die Nut Shell – Vorkurs Informatik an der TU Braunschweig</h1>
