More migration changes

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <ul>
             <li><a href="https://www.tu-braunschweig.de/ips/teaching/ws14-15/vorkurs">Informationen über den Vorkurs</a></li>
-            <li><a href="http://blog.morr.cc/tag/thesis/">Blogeinträge über die Entwicklung der Nut Shell</a></li>
+            <li><a href="http://morr.cc/tag/thesis/">Blogeinträge über die Entwicklung der Nut Shell</a></li>
         </ul>
 
     </body>
