--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <h2>Links</h2>
 
         <ul>
-            <li><a href="https://www.tu-braunschweig.de/ips/teaching/ws14-15/vorkurs">Informationen über den Vorkurs</a></li>
             <li><a href="http://morr.cc/tag/thesis/">Blogeinträge über die Entwicklung der Nut Shell</a></li>
+            <li><a href="http://morr.cc/bachelor-thesis/">Sebastian's Bachelorarbeit</a></li>
         </ul>
 
     </body>
