Two changed URLs

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <h2>Links</h2>
 
         <ul>
-            <li><a href="http://morr.cc/tag/thesis/">Blogeinträge über die Entwicklung der Nut Shell</a></li>
-            <li><a href="http://morr.cc/bachelor-thesis/">Sebastian's Bachelorarbeit</a></li>
+            <li><a href="http://morr.cc/tag/bachelor/">Blogeinträge über die Entwicklung der Nut Shell</a></li>
+            <li><a href="http://morr.cc/the-nut-shell/">Sebastian's Bachelorarbeit</a></li>
         </ul>
 
     </body>
