--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
             <li>Git, das Paket heißt fast überall <code>git</code>.</li>
             <li>Zur Bearbeitung der Lektionen brauchen Sie verschiedene Programme, nämlich mindestens Java und pdflatex. Wenn Sie merken, dass Ihnen ein weiteres Programm fehlt, ist es kein Problem, es während der Lektion nachzuinstallieren.</li>
         </ol>
+        
+        <p>Alternativ können Sie eine bereitgestellte Xubuntu VM benutzen:</p>
+
+        <ol>
+            <li>Laden Sie die <a href="http://134.169.47.161/vorkurs/vorkurs_informatik_vm.tar.gz">VM</a> herunter (nur aus dem Netz der TU Braunschweig oder über VPN erreichbar) und entpacken Sie das tar.gz Archiv.</li>
+            <li>Installieren Sie eine passende Version von VirtualBox von <a href="https://www.virtualbox.org/">VM</a>.</li>
+            <li>Mittels Doppelklick auf die <code>vorkurs-informatik.vbox</code> wird die VM in VirtualBox hinzugefügt.</li>
+            <li>Das Passwort für die VM <code>informatik</code>.</li>
+            <li>Führen Sie nach dem Anmelden das auf dem Desktop befindliche Script <code>start.sh</code> zum Installieren aller benötigten Programme aus.</li>
+            <li>Die VM ist nun passend eingerichtet.</li>
+        </ol>
 
         <h2>Kontakt</h2>
 
