--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <li>Laden Sie die <a href="http://134.169.47.161/vorkurs/vorkurs_informatik_vm.tar.gz">VM</a> herunter (nur aus dem Netz der TU Braunschweig oder über VPN erreichbar) und entpacken Sie das tar.gz Archiv.</li>
             <li>Installieren Sie eine passende Version von <a href="https://www.virtualbox.org/">VirtualBox</a>.</li>
             <li>Mittels Doppelklick auf die <code>vorkurs-informatik.vbox</code> wird die VM in VirtualBox hinzugefügt.</li>
-            <li>Das Passwort für die VM <code>informatik</code>.</li>
-            <li>Führen Sie nach dem Anmelden das auf dem Desktop befindliche Script <code>start.sh</code> zum Installieren aller benötigten Programme aus.</li>
+            <li>Das Passwort für die VM ist <code>informatik</code>.</li>
+            <li>Führen Sie nach dem Anmelden das auf dem Desktop befindliche Script <code>start.sh</code> zum Installieren aller benötigten Programme aus (Ausführen im Terminal).</li>
             <li>Die VM ist nun passend eingerichtet.</li>
         </ol>
 
