--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <li>Zur Bearbeitung der Lektionen brauchen Sie verschiedene Programme, nämlich mindestens Java und pdflatex. Wenn Sie merken, dass Ihnen ein weiteres Programm fehlt, ist es kein Problem, es während der Lektion nachzuinstallieren.</li>
         </ol>
         
-        <p>Alternativ können Sie eine bereitgestellte Xubuntu VM benutzen:</p>
+        <p>Alternativ können Sie eine bereitgestellte Ubuntu-Mate VM benutzen:</p>
 
         <ol>
             <li>Laden Sie die <a href="http://134.169.47.161/vorkurs/vorkurs_informatik_vm.tar.gz">VM</a> herunter (nur aus dem Netz der TU Braunschweig oder über VPN erreichbar) und entpacken Sie das tar.gz Archiv.</li>
