--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
         <ol>
             <li>
-            Kopieren Sie folgende Zeile in die Zwischenablage:
-            <blockquote><code>source <(curl -s tubs-ips.github.io/nutsh-vorkurs/setup)</code></blockquote>
+                Kopieren Sie folgende Zeile in die Zwischenablage:
+                <blockquote>
+                    <code>source <(curl -s tubs-ips.github.io/nutsh-vorkurs/setup)</code>
+                </blockquote>
             </li>
             <li>Öffnen Sie ein Terminalfenster (auf den Unirechnern: Oben links <em>Anwendungen → Diensprogramme → Terminal</em>, in dem eine <code>bash</code>-Shell laufen sollte (dies ist Standard).</li>
             <li>Kopieren Sie die Zeile hinein und drücken Sie <i>Enter</i>. Die Installation startet.</li>
@@ -46,16 +48,14 @@
             <li>Zur Bearbeitung der Lektionen brauchen Sie verschiedene Programme, nämlich mindestens Java und pdflatex. Wenn Sie merken, dass Ihnen ein weiteres Programm fehlt, ist es kein Problem, es während der Lektion nachzuinstallieren.</li>
         </ol>
         
-        <!--p>Alternativ können Sie eine bereitgestellte Ubuntu-Mate VM benutzen:</p>
+        <p>Alternativ können Sie eine bereitgestellte Ubuntu-Mate VM benutzen:</p>
 
         <ol>
-            <li>Laden Sie die <a href="http://134.169.47.161/vorkurs/vorkurs_informatik_vm.tar.gz">VM</a> herunter (nur aus dem Netz der TU Braunschweig oder über VPN erreichbar) und entpacken Sie das tar.gz Archiv.</li>
             <li>Installieren Sie eine passende Version von <a href="https://www.virtualbox.org/">VirtualBox</a>.</li>
-            <li>Mittels Doppelklick auf die Datei <code>vorkurs-informatik.vbox</code> wird die VM in VirtualBox hinzugefügt.</li>
+            <li>Laden Sie die <a href="https://vorkurs.ips.cs.tu-bs.de/mubuntu.ova">VM</a> herunter und importieren Sie diese mittels Doppelklick in VirtualBox.</li>
             <li>Das Passwort für die VM ist <code>informatik</code>.</li>
-            <li>Führen Sie nach dem Anmelden das auf dem Desktop befindliche Script <code>start.sh</code> zum Installieren aller benötigten Programme aus (Ausführen im Terminal).</li>
-            <li>Die VM ist nun passend eingerichtet.</li>
-        </ol-->
+            <li>Die VM ist bereits passend eingerichtet.</li>
+        </ol>
 
         <h2>Kontakt</h2>
 
