--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <ul>
             <li>Neu: Über SSH auf dem GITZ-Server (von überall aus)
-            <p>Hierbei behalten Sie Ihren aktuellen Fortschritt, Sie können allerdings keine grafischen Programme starten (gedit, acroread). Verbinden Sie sich per <i>ssh</i> (Linux, Mac OS) oder <a href="http://www.putty.org"><i>Putty</i></a> (Windows) mit dem Server <code>rzloginlx.rz.tu-bs.de</code></p></li>
+            <p>Hierbei behalten Sie Ihren aktuellen Fortschritt, Sie können allerdings keine grafischen Programme starten (gedit, acroread). Verbinden Sie sich per <i>ssh</i> (Linux, Mac OS) oder <a href="http://www.putty.org"><i>Putty</i></a> (Windows) mit dem Server <code>izcip01.ibr.cs.tu-bs.de</code></p></li>
             <li>In den Linux-Räumen des GITZ</li>
             <li>Auf Ihrem eigenen Rechner</li>
         </ul>
