--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
         <ol>
             <li>Installieren Sie eine passende Version von <a href="https://www.virtualbox.org/">VirtualBox</a>.</li>
+            <li>Installieren Sie ebenfalls das <code>VirtualBox 5.X.X Oracle VM VirtualBox Extension Pack</code> welche ebenfalls auf der Downloadseite angeboten werden.</li>
             <li>Laden Sie die <a href="https://vorkurs.ips.cs.tu-bs.de/mubuntu.ova">VM</a> herunter und importieren Sie diese mittels Doppelklick in VirtualBox.</li>
             <li>Das Passwort für die VM ist <code>informatik</code>.</li>
             <li>Die VM ist bereits passend eingerichtet.</li>
