Windows Subsystem for Linux

--- a/index.html
+++ b/index.html
@@ -48,14 +48,10 @@
             <li>Zur Bearbeitung der Lektionen brauchen Sie verschiedene Programme, nämlich mindestens Java und pdflatex. Wenn Sie merken, dass Ihnen ein weiteres Programm fehlt, ist es kein Problem, es während der Lektion nachzuinstallieren.</li>
         </ol>
         
-        <p>Alternativ können Sie eine bereitgestellte Ubuntu-Mate VM benutzen:</p>
+        <p>Alternativ können Sie das Windows Subsystem für Linux verwenden</p>
 
         <ol>
-            <li>Installieren Sie eine passende Version von <a href="https://www.virtualbox.org/wiki/Downloads">VirtualBox</a>.</li>
-            <li>Installieren Sie ebenfalls das <code>VirtualBox 5.X.X Oracle VM VirtualBox Extension Pack</code>, welches ebenfalls auf der Downloadseite angeboten wird. Klicken Sie hierzu auf <code>All supported platforms</code>.</li>
-            <li>Laden Sie die <a href="https://vorkurs.ips.cs.tu-bs.de/mubuntu.ova">VM</a> herunter und importieren Sie diese mittels Doppelklick in VirtualBox.</li>
-            <li>Das Passwort für die VM ist <code>informatik</code>.</li>
-            <li>Die VM ist bereits passend eingerichtet.</li>
+            <li>Befolgen Sie die folgende <a href="https://msdn.microsoft.com/de-de/commandline/wsl/install_guide#for-anniversary-update-and-creators-update-install-using-lxrun" target="_blank">Installationsanweisung</a>.</li>
         </ol>
 
         <h2>Kontakt</h2>
