--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li>Zur Bearbeitung der Lektionen brauchen Sie verschiedene Programme, nämlich mindestens Java und pdflatex. Wenn Sie merken, dass Ihnen ein weiteres Programm fehlt, ist es kein Problem, es während der Lektion nachzuinstallieren.</li>
         </ol>
         
-        <p>Alternativ können Sie das Windows Subsystem für Linux verwenden</p>
+        <p>Alternativ können Sie das Windows Subsystem für Linux verwenden:</p>
 
         <ol>
             <li>Befolgen Sie die folgende <a href="https://msdn.microsoft.com/de-de/commandline/wsl/install_guide#for-anniversary-update-and-creators-update-install-using-lxrun" target="_blank">Installationsanweisung</a>.</li>
