--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
         <ol>
             <li>Befolgen Sie die folgende <a href="https://msdn.microsoft.com/de-de/commandline/wsl/install_guide#for-anniversary-update-and-creators-update-install-using-lxrun" target="_blank">Installationsanweisung</a>.</li>
+            <li>Hiernach können Sie sich über SSH mit den UNI-Rechnern verbinden oder die Nut Shell, nach der Installation der Abhängigkeiten, lokal verwenden.</li> 
         </ol>
 
         <h2>Kontakt</h2>
